--- a/_posts/2018-02-19-welcome-2017.1.md
+++ b/_posts/2018-02-19-welcome-2017.1.md
@@ -5,9 +5,9 @@ excerpt: Come join us in the Graph tour, with Neo4j one of the leading Graph dat
 author: Pedro Mendonca
 ---
 
-Come join us in the #GraphTour. Neo4j one of the leading Graph Database in the world is allowing us to be one of their stops. We will be hosting a one hour workshop teaching you guys the basics of a graph database, perfect for building social networks and all kinds of related data structures.
+Come join us in the #GraphTour. Neo4j one of the leading Graph Database in the world is allowing us to be one of their stops. We will be hosting an one hour workshop teaching you guys the basics of a graph database, perfect for building social networks and all kinds of related data structures.
 
-This event is free and open to all levels so no reason to miss it. Our introduction to Neo4j is going to be happening on the 20th of february, at 6pm in the Computer Science building at the university of Nottingham.
+This event is free and open to all levels so no reason to miss it. Our introduction to Neo4j is going to be happening on the 20th of february, at 6pm in the Computer Science building at the University of Nottingham.
 
 If you want to know more about the bigger graph tour events
 https://neo4j.com/graphtour/
