Update file(s) "/events/" from "HackSocNotts/events"

--- a/content/events/2021-egm.md
+++ b/content/events/2021-egm.md
@@ -4,6 +4,7 @@ date: "2021-07-13"
 time: "7-9pm"
 start: "2021-07-13T19:00:00+01:00"
 end: "2021-07-13T21:00:00+01:00"
+location: "Online"
 ---
 
 Nominations for the remaining roles on the committee are now open, so be sure to nominate yourself if interested!
