Update file(s) "/events/" from "HackSocNotts/events"

--- a/content/events/2021-11-09.md
+++ b/content/events/2021-11-09.md
@@ -7,4 +7,4 @@ end: "2021-11-09T21:00:00+00:00"
 location: "Exchange LT3"
 ---
 
-Peter and James have a play with some old-ass Linux CDs we found
+Peter and James have a play with some old-ass Linux CDs we found.
