--- a/content/events/2021-11-11.md
+++ b/content/events/2021-11-11.md
@@ -1,5 +1,5 @@
 ---
-title: "What they don't teach you ~~at Harvard business school~~ in a tech degree."
+title: "What they don't teach you in a tech degree."
 date: "2021-11-11"
 time: "7-9pm"
 start: "2021-11-11T19:00:00+00:00"
