--- a/content/events/2022-02-17-c-50-years.md
+++ b/content/events/2022-02-17-c-50-years.md
@@ -7,6 +7,4 @@ end: "2022-02-17T21:00:00+00:00"
 location: "TBD"
 ---
 
-This year the C programming language will be turning 50 years old. From its roots inside Bell Labs where is was designed to make writing Unix easier it has come a long way, and is now one of hte most dominant languages, with untold millions of lines of code out in the wild.
-
-This event will be about C, but the exact details are TBD.
+2022 marks the 50th anniversary of the C programming language! To celebrate this, I (Jacob) am going to download many different historical C compilers and demonstrate how the language evolved from a simple language originally written in assembly, to the language we all know and love today.
