Update file(s) "/events/" from "HackSocNotts/events"

--- a/content/events/2022-02-01-python1.md
+++ b/content/events/2022-02-01-python1.md
@@ -4,7 +4,7 @@ date: "2022-02-01"
 time: "6:30-8:45pm"
 start: "2022-02-01T18:30:00+00:00"
 end: "2022-02-01T20:45:00+00:00"
-location: "TBD"
+location: "LT3, Exchange building"
 ---
 
 Do you want to learn how to program? In this workshop you will be introduced to the Python Programming Language, and be taught the basic concepts that underpin programming generally.
