--- a/content/events/2022-02-17-c-50-years.md
+++ b/content/events/2022-02-17-c-50-years.md
@@ -4,7 +4,7 @@ date: "2022-02-17"
 time: "7-9pm"
 start: "2022-02-17T19:00:00+00:00"
 end: "2022-02-17T21:00:00+00:00"
-location: "TBD"
+location: "LT1, Exchange Building"
 ---
 
 2022 marks the 50th anniversary of the C programming language! To celebrate this, I (Jacob) am going to download many different historical C compilers and demonstrate how the language evolved from a simple language originally written in assembly, to the language we all know and love today.
